--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/ui": "^2.0"
     },
     "require-dev": {
+        "bfinlay/laravel-excel-seeder": "^2.1",
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
