--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0"
+        "laravel/ui": "^2.0",
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "bfinlay/laravel-excel-seeder": "^2.1",
